--- a/AhmedQahtan/index.html
+++ b/AhmedQahtan/index.html
@@ -44,7 +44,7 @@
                  <a href="certification/web.pdf" class="profile_More_detaile">More detaile</a>
 
              </strong>
-            </div> -->
+            </div>
         
 
     </section>
