--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
              <p class="Profile_Category"> Udemy Certification</p>
              <strong class="Profile_title">
                  <span>Certification</span>
-                 <a href="certification/web.pdf" class="profile_More_detaile">More detaile</a>
+                 <a href="#" class="profile_More_detaile">More detaile</a>
 
              </strong>
             </div>
@@ -168,7 +168,7 @@
 
 <!-- ========= -->
 
-<section class="footer">
+<section class="footer" id="Contact">
 
     <div class="box-container">
 
