--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
            </div>
         </div>
         <!-- .......... -->
-        <div class="Profile_Card">
+
+        <!-- <div class="Profile_Card">
             <div class="Profile_image">
                 <img src="images/profile.jpg" alt="ERROR">
             </div>
@@ -45,7 +46,7 @@
 
              </strong>
             </div>
-        
+        </div> -->
 
     </section>
 
@@ -154,7 +155,7 @@
                     <div class="Project_Info">
                      <p class="Project_Category">MyNote</p>
                      <strong class="Project_title">
-                         <span>Mopile Application for Writting Notes </span>
+                         <span>Mobile Application for Writting Notes </span>
                          <a href="#" class="More_detaile">More Details</a>
                      </strong>
                     </div>
@@ -185,7 +186,7 @@
 
         <div class="box">
             <h3>contact us</h3>
-            <p>+967774714500</p>
+            <p><i class="fab fa-whatsapp"> </i> +967774714500</p>
             <a href="#" class="link">@AQ_Software</a>
         </div>
 
