--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-    <a href="" class="logo"><strong>A</strong>hmed_Qahtan</a>
+    <a href="" class="logo"><strong>A</strong>hmed_<strong>Q</strong>ahtan</a>
      <nav>
          <a href="#Services">Services</a>
          <a href="#Project">Projects</a>
